monitoring/overlays/dell7040/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-grafana
  namespace: monitoring
spec:
  hostnames:
    - monitoring.lab.definit.co.uk
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infrastructure-gateway
      namespace: infrastructure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: monitoring-grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
